feat: Enhance project setup for Cloudflare Pages deployment
- Update .gitignore to include Cloudflare build outputs and temporary files
- Add deployment scripts in package.json for building and deploying to Cloudflare
- Revise README.md to include detailed Cloudflare Pages deployment instructions
- Modify server.ts to serve built files and handle on-the-fly TypeScript compilation
- Update public/index.html to reference the built main.js file
- Adjust workerManager.ts to use the appropriate worker file based on the environment

This commit prepares the project for seamless deployment to Cloudflare Pages, improving the development workflow and deployment process.

--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
         <audio id="audioOutput" controls></audio>
     </div>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
